# fastapi-utk

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
docs/: BUILD.md
example/: README.md  app.py  requirements.txt
example/db/repo/: user.py
example/dto/: user.py
example/routes/: router.py
example/routes/users/: __init__.py  endpoint.py  response.py  router.py
fastapi_utk/: __init__.py
fastapi_utk/middleware/: __init__.py  camel_case_query_params.py
fastapi_utk/not_set/: __init__.py  not_set.py
fastapi_utk/openapi/: __init__.py  translate_query_params_snake_to_camel.py  types.py
fastapi_utk/pagination/: __init__.py  config.py  paginator.py  response.py
fastapi_utk/sorting/: __init__.py  config.py  sorting.py
fastapi_utk/strings/: __init__.py  utils.py  uuid.py
