[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-utk"
version = "0.1.0"
description = "FastAPI Ultimate Toolkit"
readme = "README.md"
authors = [
    { name = "v1a0", email = "contact@v1a0.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["example*", "docs*"]
